Fixed excessive bulletpoint spacing

--- a/ce-support.css
+++ b/ce-support.css
@@ -377,6 +377,7 @@ a.btn {
     font-size: 18px;
     line-height: 24px;
     color: #5c5e5f;
+    margin-bottom: 0.75em;
 }
 
 #fullArticle p {
